--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.2",
+    "mongoose-unique-validator": "^2.0.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   }
