--- a/package.json
+++ b/package.json
@@ -31,23 +31,27 @@
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
     "node-sass": "^4.7.2",
-    "nyc": "^11.6.0",
+    "nyc": "^11.8.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "supertest": "^3.0.0",
+    "supertest": "^3.1.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.2",
     "mongoose-unique-validator": "^2.0.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "^16.4.0",
+    "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2",
+    "sinon": "^5.0.10"
   }
 }
