--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react": "^16.4.0",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
-    "sinon": "^5.0.10"
+    "sinon": "^5.0.10",
+    "striptags": "^3.1.1",
+    "unescape": "^1.0.1"
   }
 }
